# HBC-Tool

./: LICENSE  MANIFEST.in  QWEN.md  README.md  benchmark.py  benchmark2.py  benchmark3.py  benchmark_bytearray.py  benchmark_write.py  patch_bitwriter.py  patch_bitwriter2.py  patch_write.py  pyproject.toml  setup.py  test_profile_all.py
.github/workflows/: build-wheels.yml
hbctool/: __init__.py  _bitcodec.cpp  _fastutil.cpp  hasm.py  metadata.py  test.py  util.py
hbctool/hbc/: __init__.py
hbctool/hbc/hbc59/: __init__.py  parser.py  test.py
hbctool/hbc/hbc62/: __init__.py  parser.py  test.py
hbctool/hbc/hbc74/: __init__.py  parser.py  test.py
hbctool/hbc/hbc76/: __init__.py  test.py  translator.py
hbctool/hbc/hbc83/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc84/: __init__.py
hbctool/hbc/hbc85/: __init__.py
hbctool/hbc/hbc86/: __init__.py
hbctool/hbc/hbc87/: __init__.py
hbctool/hbc/hbc88/: __init__.py  translator.py
hbctool/hbc/hbc88/tool/: opcode_generator.py
hbctool/hbc/hbc89/: __init__.py  translator.py
hbctool/hbc/hbc90/: __init__.py
hbctool/hbc/hbc91/: __init__.py  translator.py
hbctool/hbc/hbc92/: __init__.py
hbctool/hbc/hbc93/: __init__.py
hbctool/hbc/hbc94/: __init__.py
hbctool/hbc/hbc95/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc96/: __init__.py  translator.py
scripts/: benchmark_roundtrip.py
tests/: test_bitreader_eof.py  test_bitreader_readall.py  test_fastutil_asm_disasm.py  test_hasm_dump_load.py  test_hasm_parser.py  test_hbc_load.py  test_memcpy.py  test_util.py
