[tool.poetry]
name = "hbctool"
version = "0.1.6"
description = "A command-line interface for disassembling and assembling the Hermes Bytecode."
authors = ["baba01hacker"]
keywords = ["hbc", "hermes", "bytecode", "reverse", "hacking"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Baba01hacker666/HBC-Tool"
repository = "https://github.com/Baba01hacker666/HBC-Tool"
documentation = "https://github.com/Baba01hacker666/HBC-Tool"

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
hbctool = "hbctool:main"